# TeleMail

./: .gitignore  pyproject.toml
src/: database.py  gmail.py  main.py  setting.py  telemail.py
